new: add component, confirm dialogue, style and format
